<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/dp_15"
    app:cardCornerRadius="@dimen/dp_10"
    app:cardElevation="@dimen/dp_2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_movie_poster"
            android:layout_width="@dimen/dp_100"
            android:layout_height="@dimen/dp_100"
            android:contentDescription="@string/image_movie_poster"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_movie_title"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_22"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_medium"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_movie_poster"
            app:layout_constraintTop_toTopOf="@id/iv_movie_poster"
            tools:text="@string/dummy_title" />

        <TextView
            android:id="@+id/tv_movie_genre"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_22"
            android:layout_marginTop="@dimen/dp_9"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_medium"
            android:maxLines="1"
            android:textColor="@color/soft_gray"
            android:textSize="@dimen/sp_12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_movie_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_movie_title"
            tools:text="@string/dummy_genre" />

        <TextView
            android:id="@+id/tv_movie_release"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_22"
            android:layout_marginTop="@dimen/dp_9"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/soft_gray"
            android:textSize="@dimen/sp_12"
            app:layout_constraintStart_toEndOf="@id/iv_movie_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_movie_genre"
            tools:text="@string/dummy_release" />

        <RatingBar
            android:id="@+id/rb_movie"
            style="@style/Base.Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_22"
            android:layout_marginTop="@dimen/dp_9"
            android:theme="@style/customRating"
            app:layout_constraintStart_toEndOf="@id/iv_movie_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_movie_release"
            tools:rating="4" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_5"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_14"
            app:layout_constraintBottom_toBottomOf="@id/rb_movie"
            app:layout_constraintStart_toEndOf="@id/rb_movie"
            app:layout_constraintTop_toTopOf="@id/rb_movie"
            tools:text="@string/dummy_rating" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>