<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/dp_16">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_poster"
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_55"
        android:elevation="@dimen/dp_5"
        app:cardCornerRadius="@dimen/dp_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:background="@color/gray"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_movie_poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/image_movie_poster" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_movie_title"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:ellipsize="end"
        android:fontFamily="@font/roboto_bold"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintEnd_toStartOf="@id/tv_movie_rating"
        app:layout_constraintStart_toEndOf="@id/cv_poster"
        app:layout_constraintTop_toTopOf="@id/cv_poster"
        tools:text="@string/dummy_title" />

    <TextView
        android:id="@+id/tv_movie_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_25"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/soft_gray"
        android:textSize="@dimen/sp_13"
        app:layout_constraintBottom_toBottomOf="@id/cv_poster"
        app:layout_constraintStart_toEndOf="@id/cv_poster"
        app:layout_constraintTop_toBottomOf="@id/tv_movie_title"
        tools:text="@string/dummy_release" />

    <View
        android:id="@+id/vw_rounded"
        android:layout_width="@dimen/dp_5"
        android:layout_height="@dimen/dp_5"
        android:layout_marginStart="@dimen/dp_5"
        android:background="@drawable/bg_rounded_soft_gray"
        app:layout_constraintBottom_toBottomOf="@id/tv_movie_year"
        app:layout_constraintStart_toEndOf="@id/tv_movie_year"
        app:layout_constraintTop_toTopOf="@id/tv_movie_year" />

    <TextView
        android:id="@+id/tv_movie_genre"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_5"
        android:layout_marginEnd="@dimen/dp_10"
        android:ellipsize="end"
        android:fontFamily="@font/roboto_medium"
        android:maxLines="1"
        android:textColor="@color/soft_gray"
        android:textSize="@dimen/sp_13"
        app:layout_constraintBottom_toBottomOf="@id/tv_movie_year"
        app:layout_constraintEnd_toStartOf="@id/tv_movie_rating"
        app:layout_constraintStart_toEndOf="@id/vw_rounded"
        app:layout_constraintTop_toTopOf="@id/tv_movie_year"
        tools:text="@string/dummy_genre" />

    <TextView
        android:id="@+id/tv_movie_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_13"
        app:layout_constraintBottom_toBottomOf="@id/cv_poster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/cv_poster"
        tools:text="@string/dummy_rating" />

</androidx.constraintlayout.widget.ConstraintLayout>