<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.detail.DetailMovieActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:elevation="@dimen/dp_0">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_scrollFlags="noScroll">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/dp_16"
                android:paddingEnd="@dimen/dp_16">

                <ImageView
                    android:id="@+id/iv_favorite"
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/icon_favorite"
                    android:src="@drawable/ic_heart_unactive" />

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/dp_300"
                android:layout_height="@dimen/dp_300"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_28"
                app:cardCornerRadius="@dimen/dp_10"
                app:cardElevation="@dimen/dp_5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_movie_poster"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/image_movie_poster" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_25"
                android:layout_marginEnd="@dimen/dp_16"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/dummy_title"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_24" />

            <TextView
                android:id="@+id/tv_movie_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_9"
                android:layout_marginEnd="@dimen/dp_16"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/dummy_genre"
                android:textColor="@color/gray"
                android:textSize="@dimen/sp_12" />

            <TextView
                android:id="@+id/tv_movie_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginEnd="@dimen/dp_16"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/dummy_language"
                android:textColor="@color/gray"
                android:textSize="@dimen/sp_12" />

            <TextView
                android:id="@+id/tv_movie_popularity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginEnd="@dimen/dp_16"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/dummy_popularity"
                android:textColor="@color/gray"
                android:textSize="@dimen/sp_12" />

            <TextView
                android:id="@+id/tv_movie_release"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_marginEnd="@dimen/dp_16"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/dummy_release"
                android:textColor="@color/gray"
                android:textSize="@dimen/sp_12" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/rb_movie"
                    style="@style/Base.Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_5"
                    android:rating="4"
                    android:theme="@style/customRating"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_movie_release" />

                <TextView
                    android:id="@+id/tv_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/dp_5"
                    android:fontFamily="@font/roboto_medium"
                    android:paddingTop="@dimen/dp_2"
                    android:paddingBottom="@dimen/dp_0"
                    android:text="@string/dummy_rating"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_14" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_title_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_27"
                android:layout_marginEnd="@dimen/dp_16"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/overview"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/tv_movie_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_9"
                android:layout_marginEnd="@dimen/dp_16"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/dummy_overview"
                android:textColor="@color/gray"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
